Optimized boxes (with column_ class)

--- a/sources/stylesheets/__constants.styl
+++ b/sources/stylesheets/__constants.styl
@@ -10,6 +10,8 @@ font-size-tiny  = 0.8em
 padding         = 10px
 dimension       = 20px
 
+MARGIN          = 1em
+
 /* HEADER */
 header_height   = 48px
 header_bck      = #000
@@ -32,8 +34,7 @@ list_hover        = #ccc
 list_hover_light  = #eee
 list_active       = #999
 
-
 /* BOXES */
-HEADER_HEIGHT = 44px
+HEADER_HEIGHT = 52px
 ASIDE_WIDTH   = 232px
 DIMENSION     = (dimension - 6)
