--- a/sources/stylesheets/tuktuk.font.styl
+++ b/sources/stylesheets/tuktuk.font.styl
@@ -20,7 +20,6 @@ h5
 h6
   font-size: 1.0em
 
-
 /* ========================= TEXT ========================= */
 .text
   &.thin
@@ -31,12 +30,14 @@ h6
     font-weight: 400
   &.bold
     font-weight: 700
+
   &.italic
     font-style: italic
   &.underline
     border-bottom: 1px solid
   &.uppercase
     text-transform: uppercase
+
   &.left
     text-align: left
   &.right
@@ -45,18 +46,19 @@ h6
     text-align: center
   &.justify
     text-align: justify
+
   &.tiny
     font-size: font-size-tiny
   &.small
     font-size: font-size-small
   &.big
     font-size: font-size-big
+
 /* ========================= BASIC ELEMENTS ========================= */
 p
-  font-size: s = 1.1em
-  line-height: s
+  // font-size: font-size-big
+  font-size: 1.1em
 small
-  font-size: size = font-size-small
-  line-height: size
+  font-size: font-size-small
 strong
   font-weight: 700 !important
