--- a/sources/stylesheets/tuktuk.boxes.styl
+++ b/sources/stylesheets/tuktuk.boxes.styl
@@ -32,23 +32,23 @@ body, html
       box-flex(1)
 
   & > aside
-    box-flex(0)
-    width: ASIDE_WIDTH
     z-index: 2
+    box-flex(0)
+    // width: ASIDE_WIDTH
+    margin: 0px !important
+    float: none !important
 
     &.absolute
       position: absolute
       height: inherit
-      transition all 300ms
+      transition all 400ms
 
       &:not(.right)
-        transform translateX(-(ASIDE_WIDTH * 1.25))
-        &.active
-          transform translateX(0px)
+        transform translateX(-100%)
       &.right
-        transform translateX((ASIDE_WIDTH * 1.25))
-        &.active
-          transform translateX(-(ASIDE_WIDTH))
+        transform translateX(100%)
+       &.active
+        transform translateX(0%)
 
     & > div
       width: 100%
@@ -78,7 +78,7 @@ body, html
 
         & > small
           text-transform: uppercase
-          font-size: 0.85em
+          font-size: font-size-tiny
 
   /* ====================== NAVIGATION ====================== */
   & nav
@@ -114,24 +114,12 @@ body, html
         box-flex(0)
         display: inherit
 
-
     & > a > small
       position: relative
       margin-left: 4px
       bottom: 1px
 
   /* ====================== WIDGETS ====================== */
-  & .margin
-    margin: DIMENSION
-  & .margin-left
-    margin-left: DIMENSION
-  & .margin-right
-    margin-right: DIMENSION
-  & .margin-top
-    margin-top: DIMENSION
-  & .margin-bottom
-    margin-bottom: DIMENSION
-
   & > aside, & > section
     & .session
       & > *
@@ -146,10 +134,6 @@ body, html
         float: right
 
   & > aside
-    & article .avatar
-      height: ASIDE_WIDTH - (DIMENSION * 2)
-      width: ASIDE_WIDTH - (DIMENSION * 2)
-
     & hr
       border: 0
       height: 1px
