--- a/sources/stylesheets/tuktuk.layout.styl
+++ b/sources/stylesheets/tuktuk.layout.styl
@@ -26,12 +26,13 @@ body
   padding: 0
   -webkit-font-smoothing: antialiased
   -webkit-text-size-adjust: none
+  // line-height: 200%
 
   & *
     box-sizing: border-box
 
   & > header
-    height: h = 48px
+    h = 48px
     line-height: h
     position: relative
 
@@ -78,5 +79,3 @@ body
     outline: 0
     &:link
       transition(color 0.2s linear 0s)
-
-
