--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -28,18 +28,16 @@ body
   font-size: 14px
   font-family: "-Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 400
+  background: bck_lightest
 
-  & > header
-    & nav a
-      color: rgba(255,255,255,0.5)
-      &:hover, &:active
-        color: #fff
+  & a
+    color: COLOR
+    &:hover, &:active
+      color: THEME
 
   & hr
-    border-style: solid
-    border-color: bck_light
-    margin: 20px 0
-    padding: 0
+    margin: 15px 0
+    background: bck_light
 
   & .radius
     border-radius: BORDER-RADIUS
@@ -59,8 +57,6 @@ body
 
   /* ====================== BACKGROUNDS ====================== */
   & .bck
-    &.lightest
-      background-color: bck_lightest
     &.light
       background-color: bck_light
     &.dark
@@ -71,8 +67,6 @@ body
       background-color: THEME
     &.alert
       background-color: ALERT !important
-    &.theme
-      background-color: THEME
 
   /* ================================= TEXT ================================ */
   & .text
@@ -147,7 +141,7 @@ body
 
   /* ====================== BUTTONS ====================== */
   & .button, button
-    color: white
+    color: white !important
     font-weight: 600
     &:not(.transparent)
       background-color: THEME
@@ -172,9 +166,8 @@ body
       font-weight: 500
 
 
-  /* ====================== BUTTONS ====================== */
-  & a
-    color: THEME
+  & div.img
+    background: bck_light
 
   /* ====================== TAGs ====================== */
   & :not(.icon).tag
@@ -182,12 +175,13 @@ body
     border: solid 1px rgba(0,0,0,0.1)
     border-radius 2px
 
+
+
 [data-tuktuk="modal"]
   & header
     background: THEME !important
     color: #fff
 
-  /* ====================== ASIDE ====================== */
 
 
 [data-tuktuk=boxes]
@@ -197,8 +191,6 @@ body
       color: lighten(COLOR, 15%)
       & a:not(.button)
         color: lighten(COLOR, 25%)
-      & hr
-        background: aside_light_anchor
 
     &.dark
       &
@@ -225,7 +217,7 @@ body
   /* ====================== NAVIGATION ====================== */
   & nav
     &[data-filter] > a:not(.button)
-      border-radius 2px
+      border-radius BORDER-RADIUS
       color: lighten(COLOR, 40%)
       &:hover, &:active, &.active
         color: text
@@ -237,10 +229,6 @@ body
 
     & > a > small
       opacity: 0.5
-
-
-  & aside footer, section > footer
-      background: rgba(0,0,0,0.1)
 
   /* ====================== MENU ====================== */
   & [data-menu] > a:not(.button)
