New size for font & decoration

--- a/sources/stylesheets/tuktuk.font.styl
+++ b/sources/stylesheets/tuktuk.font.styl
@@ -34,7 +34,7 @@ h6
   &.italic
     font-style: italic
   &.underline
-    border-bottom: 1px solid
+    text-decoration: underline
   &.uppercase
     text-transform: uppercase
 
@@ -53,10 +53,11 @@ h6
     font-size: font-size-small
   &.big
     font-size: font-size-big
+  &.large
+    font-size: font-size-large
 
 /* ========================= BASIC ELEMENTS ========================= */
 p
-  // font-size: font-size-big
   font-size: 1.1em
 small
   font-size: font-size-small
