Change tag style

--- a/sources/stylesheets/tuktuk.widget.styl
+++ b/sources/stylesheets/tuktuk.widget.styl
@@ -74,9 +74,10 @@ img
 /* ================== TAGs ================== */
 :not(.icon).tag
   position: relative
-  padding: 3px 4px
+  top: -2px
+  padding: 1px 3px
+  font-weight: bold !important
   font-size: 9px !important
-  line-height: 1.0em
   text-transform: uppercase
 
 hr
