--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -33,7 +33,7 @@ body
   & a
     color: COLOR
     &:not(.button):hover, &:not(.button):active
-      color: THEME !important
+      color: THEME
 
   & hr
     margin: 15px 0
@@ -76,6 +76,8 @@ body
         background: lighten(bck_dark, 10%)
       & a
         color: #fff
+        &:hover
+          color: THEME
 
 
   /* ================================= TEXT ================================ */
@@ -84,9 +86,9 @@ body
       text-shadow 0 1px 1px rgba(0,0,0,0.5)
   & .color
     &.white
-      color: #fff
+      color: #fff !important
     &.theme
-      color: THEME
+      color: THEME !important
 
   /* ====================== FORM ====================== */
   & form, .form
