--- a/sources/stylesheets/__constants.styl
+++ b/sources/stylesheets/__constants.styl
@@ -10,6 +10,8 @@ font-size-tiny  = 0.8em
 padding         = 10px
 dimension       = 20px
 
+AIR             = 1em
+
 MARGIN          = 1em
 
 /* HEADER */
