--- a/sources/stylesheets/tuktuk.font.styl
+++ b/sources/stylesheets/tuktuk.font.styl
@@ -38,15 +38,6 @@ h6
   &.uppercase
     text-transform: uppercase
 
-  &.left
-    text-align: left
-  &.right
-    text-align: right
-  &.center
-    text-align: center
-  &.justify
-    text-align: justify
-
   &.tiny
     font-size: font-size-tiny
   &.small
@@ -55,6 +46,16 @@ h6
     font-size: font-size-big
   &.large
     font-size: font-size-large
+
+.align, .text
+  &.left
+    text-align: left
+  &.right
+    text-align: right
+  &.center
+    text-align: center
+  &.justify
+    text-align: justify
 
 /* ========================= BASIC ELEMENTS ========================= */
 p
