--- a/sources/stylesheets/tuktuk.widget.styl
+++ b/sources/stylesheets/tuktuk.widget.styl
@@ -84,3 +84,27 @@ hr
   border: 0
   height: 1px
   margin: 0px
+
+/* ====================== CONTROLS ====================== */
+[data-tuktuk=totals]
+  display-box()
+  box-pack(justify)
+  text-align: center
+  list-style: none
+
+  & > *
+    box-flex(0)
+    & > strong
+      display: block
+      font-size: 1.8em
+      line-height: font-size-tiny
+    & > small
+      text-transform: uppercase
+      font-size: font-size-tiny
+
+[data-tuktuk=buttons]
+  display-box()
+  box-pack(justify)
+  & > *
+    box-flex(0)
+    display: inherit
