--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -1,83 +1,85 @@
 @import "../components/CSSmethods/vendor.styl"
-@import url("http://fonts.googleapis.com/css?family=Open+Sans:200,300,400,700")
 @import url("http://fonts.googleapis.com/css?family=Lato:100,300,400,700")
 
+/* BUTTONS */
+WHITE           = #fff
 COLOR           = #34495e
 THEME           = #1ABC9C
+/* BUTTONS */
 SECONDARY       = #ECF0F1
 SUCCESS         = #2ECC71
 ALERT           = #E74C3C
-
-
-bck_lightest    = #fff
-bck_light       = #ECF0F1
-bck_dark        = COLOR
-bck_darkest     = #2C3E50
-
+/* BACKGROUNDS */
+LIGHT           = #ECF0F1
+DARK         = #2C3E50
+/* OTHERS */
 TRANSITION      = 400ms
 BORDER-RADIUS   = 4px
-
-aside_light_anchor = darken(bck_lightest, 15%)
-aside_dark_header  = bck_darkest
-aside_dark_anchor  = lighten(bck_dark, 15%)
-
-
 
 body
   color: COLOR
   font-size: 14px
-  font-family: "-Lato", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif
+  font-family: "Lato", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-weight: 400
-  background: bck_lightest
+  background: WHITE
 
-  & a
+  &:not(.color):not(.dark) a
     color: COLOR
     &:not(.button):hover, &:not(.button):active
       color: THEME
 
   & hr
     margin: 15px 0
-    background: bck_light
+    background: LIGHT
 
   & .radius
     border-radius: BORDER-RADIUS
 
   /* ====================== NAVIGATION ====================== */
-  & nav
-    &.group a
-      border-radius BORDER-RADIUS
-      color: #fff
-      & > .icon
-          opacity: 0.6
+  & nav[data-tuktuk=menu] > a
+    border-radius (BORDER-RADIUS / 2)
+    &:hover
+      background-color: rgba(0,0,0,0.05)
+    &.active
+      color: COLOR
+      background-color: rgba(0,0,0,0.1)
+      & .icon
+        color: THEME
+    &:not(.active):not(:hover) > .icon, & small
+      opacity: 0.6
+      font-weight: 400
+
+  .bck.color, .bck.dark
+    & nav[data-tuktuk=menu] > a
       &:hover
-        background: rgba(0,0,0,0.2)
-      &:active, &.active
-        background: THEME
+        background-color: rgba(0,0,0,0.07)
+      &.active
+        background-color: rgba(0,0,0,0.15)
 
   /* ====================== BACKGROUNDS ====================== */
   & .bck
     &.light
-      background-color: bck_light
+      background-color: LIGHT
+    &.color
+      background-color: COLOR
     &.dark
-      background-color: bck_dark
-    &.darkest
-      background-color: bck_darkest
+      background-color: DARK
     &.theme
       background-color: THEME
     &.alert
       background-color: ALERT !important
 
     &.theme, &.alert
-      color: #fff
+      color: WHITE
 
-    &.dark, &.darkest
-      color: lighten(bck_dark, 85%)
+    &.color, &.dark
+      color: lighten(COLOR, 75%)
       & hr
-        background: lighten(bck_dark, 10%)
+        background: lighten(COLOR, 10%)
       & a
-        color: #fff
-        &:hover
-          color: THEME
+        color: WHITE
+        &.active
+          color: WHITE !important
 
 
   /* ================================= TEXT ================================ */
@@ -86,15 +88,17 @@ body
       text-shadow 0 1px 1px rgba(0,0,0,0.5)
   & .color
     &.white
-      color: #fff !important
+      color: WHITE !important
     &.theme
       color: THEME !important
+    &.default
+      color: COLOR !important
 
   /* ====================== FORM ====================== */
   & form, .form
     FORM_BORDER = #dce4ec
     & input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], select, textarea
-      background-color: #fff
+      background-color: WHITE
       color: COLOR
       border: 2px solid FORM_BORDER
       border-radius BORDER-RADIUS
@@ -109,7 +113,7 @@ body
       color: FORM_BORDER
 
      & input[type="checkbox"], input[type="radio"]
-      background: #fff
+      background: WHITE
       border: 2px solid FORM_BORDER
       &:checked
         border-color: THEME
@@ -121,22 +125,22 @@ body
 
   & [data-control="checkbox"]
     RADIUS = BORDER-RADIUS * 5
-    background: darken(bck_light, 25%)
-    color: darken(bck_light, 5%)
+    background: darken(LIGHT, 25%)
+    color: darken(LIGHT, 5%)
     font-weight: 700
     border-radius: RADIUS
     & label
       border-radius: RADIUS
-      background: darken(bck_light, 50%)
+      background: darken(LIGHT, 50%)
     &.checked
       background-color: THEME
-      color: #fff !important
+      color: WHITE !important
       & label
         background-color: darken(THEME, 25%)
 
   /* ====================== TABLE ====================== */
   & table
-    background: #fff
+    background: WHITE
     color: COLOR
     border: 1px solid lighten(COLOR, 75%)
     border-radius BORDER-RADIUS
@@ -145,11 +149,11 @@ body
         background-color: lighten(COLOR, 95%)
     & th
       background-color: lighten(COLOR, 75%)
-      color: #FFF
+      color: WHITE
     & td
       &.highlight
         background-color: THEME !important
-        color: #fff
+        color: WHITE
 
   /* ====================== BUTTONS ====================== */
   & .button, button
@@ -158,11 +162,11 @@ body
     &:not(.transparent)
       background-color: THEME
       border-radius BORDER-RADIUS
-      transition box-shadow TRANSITION
+      box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.2)
       &:hover
-        box-shadow inset 0 0 128px rgba(255,255,255,0.6)
+        box-shadow: inset 0 0 128px rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.2)
       &:active
-        box-shadow inset 0 0 128px rgba(0,0,0,0.2)
+        box-shadow inset 0 0 128px rgba(0,0,0,0.1),  inset 0 1px 0 rgba(0,0,0,0.1)
       &.secondary
         background-color: darken(SECONDARY, 25%)
         color: SECONDARY
@@ -179,59 +183,32 @@ body
 
 
   & div.img
-    background: bck_light
+    background: LIGHT
 
   /* ====================== TAGs ====================== */
   & :not(.icon).tag
-    color: #fff !important
+    color: WHITE !important
     border: solid 1px rgba(0,0,0,0.1)
     border-radius 2px
-
 
 
 [data-tuktuk="modal"]
   & header
     background: THEME !important
-    color: #fff
-
+    color: WHITE
 
 
 [data-tuktuk=boxes]
   /* ====================== ASIDE ====================== */
   & aside
-    background: #fff
+    background: WHITE
     color: lighten(COLOR, 15%)
     & header
       box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1)
-
-  /* ====================== SECTION ====================== */
-  & section header
-      border-bottom: dotted 1px aside_light_anchor
-
-  /* ====================== NAVIGATION ====================== */
-  & nav
-    &[data-filter] > a:not(.button)
-      border-radius (BORDER-RADIUS / 2)
-      color: lighten(COLOR, 40%)
-      &:hover, &:active, &.active
-        color: #fff
-        background: darken(bck_light, 10%)
-
-    &[data-link] > a > .icon
-      color: aside_light_anchor
-
-    & > a > small
-      opacity: 0.5
 
   /* ====================== MENU ====================== */
   & aside [data-menu] > a:not(.button)
     border-radius (BORDER-RADIUS / 2)
     &.active
       background: THEME
-      color: #fff
-
-    aside.dark &
-      border-bottom: dotted 1px aside_dark_anchor
-      &:first-child
-        border-top: dotted 1px aside_dark_anchor
-
+      color: WHITE
