--- a/sources/stylesheets/tuktuk.button.styl
+++ b/sources/stylesheets/tuktuk.button.styl
@@ -22,7 +22,7 @@
   &:not(.icon)
     padding: 0 18px
     & .icon
-      margin-right: (padding / 2)
+      margin-right: (AIR / 2)
       display: inline-block
 
   &.anchor
