--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -31,6 +31,7 @@ body
   & hr
     margin: 15px 0
     background: LIGHT
+    background-color: rgba(0,0,0,0.1)
 
   & .radius
     border-radius: BORDER-RADIUS
@@ -76,6 +77,7 @@ body
       color: lighten(COLOR, 75%)
       & hr
         background: lighten(COLOR, 10%)
+        background: rgba(0,0,0,0.2)
       & a
         color: WHITE
         &.active
