Custom scrollbar only in "boxes" mode

--- a/sources/stylesheets/tuktuk.scroll.styl
+++ b/sources/stylesheets/tuktuk.scroll.styl
@@ -1,71 +1,71 @@
 
-::-webkit-scrollbar
+[data-tuktuk=boxes] ::-webkit-scrollbar
     width: 2px
     height: 2px
     position: absolute
 
 
-::-webkit-scrollbar-button:vertical
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:vertical
     background-color: red
 
 /* Turn on single button up on top, and down on bottom */
-::-webkit-scrollbar-button:start:decrement,
-::-webkit-scrollbar-button:end:increment
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:start:decrement,
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:end:increment
     display: block
 
 /* Turn off the down area up on top, and up area on bottom */
-::-webkit-scrollbar-button:vertical:start:increment,
-::-webkit-scrollbar-button:vertical:end:decrement
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:vertical:start:increment,
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:vertical:end:decrement
     display: none
 
 /* Place The scroll down button at the bottom */
-::-webkit-scrollbar-button:vertical:increment
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:vertical:increment
     display: none
 
 /* Place The scroll up button at the up */
-::-webkit-scrollbar-button:vertical:decrement
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:vertical:decrement
     display: none
 
 /* Place The scroll down button at the bottom */
-::-webkit-scrollbar-button:horizontal:increment
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:horizontal:increment
     display: none
 
-/* Place The scroll up button at the up */
-::-webkit-scrollbar-button:horizontal:decrement
+ Place The scroll up button at the up
+[data-tuktuk=boxes] ::-webkit-scrollbar-button:horizontal:decrement
     display: none
 
-::-webkit-scrollbar-track:vertical
+[data-tuktuk=boxes] ::-webkit-scrollbar-track:vertical
     // background-color: rgba(255,255,255,0.1)
     background-color: none
 
 
 /* Top area above thumb and below up button */
-::-webkit-scrollbar-track-piece:vertical:start
+[data-tuktuk=boxes] ::-webkit-scrollbar-track-piece:vertical:start
     border: 0px
 
 /* Bottom area below thumb and down button */
-::-webkit-scrollbar-track-piece:vertical:end
+[data-tuktuk=boxes] ::-webkit-scrollbar-track-piece:vertical:end
     border: 0px
 
 /* Track below and above */
-::-webkit-scrollbar-track-piece
+[data-tuktuk=boxes] ::-webkit-scrollbar-track-piece
     background-color: none
 
 /* The thumb itself */
-::-webkit-scrollbar-thumb:vertical
+[data-tuktuk=boxes] ::-webkit-scrollbar-thumb:vertical
     height: 50px
     background-color: rgba(0,0,0,0.4)
 
 
 /* The thumb itself */
-::-webkit-scrollbar-thumb:horizontal
+[data-tuktuk=boxes] ::-webkit-scrollbar-thumb:horizontal
     height: 50px
     background-color: gray
 
 /* Corner */
-::-webkit-scrollbar-corner:vertical
+[data-tuktuk=boxes] ::-webkit-scrollbar-corner:vertical
     background-color: black
 
 /* Resizer */
-::-webkit-scrollbar-resizer:vertical
+[data-tuktuk=boxes] ::-webkit-scrollbar-resizer:vertical
     background-color: gray
