Flexbox scrollabe in firefox (HACK)

--- a/sources/stylesheets/__constants.styl
+++ b/sources/stylesheets/__constants.styl
@@ -1,9 +1,12 @@
 @import "../components/CSSmethods/vendor.styl"
 
-font-size       = 13px
-font-size-large = 1.5em
-font-size-big   = 1.2em
-font-size-small = 0.9em
-font-size-tiny  = 0.8em
+font-size         = 13px
+font-size-large   = 1.5em
+font-size-big     = 1.2em
+font-size-small   = 0.9em
+font-size-tiny    = 0.8em
 
-AIR             = 1em
+AIR               = 1em
+
+
+FIREFOX_FLEX_HACK = 0px
