Add webkit and moz box-sizing mixin to vendor.styl

--- a/sources/components/CSSmethods/vendor.styl
+++ b/sources/components/CSSmethods/vendor.styl
@@ -18,6 +18,11 @@ border-radius()
 box-shadow()
   vendor('box-shadow', arguments)
 
+box-sizing()
+  -webkit-box-sizing arguments
+  -moz-box-sizing arguments
+  box-sizing arguments
+
 text-shadow()
   vendor('text-shadow', arguments)
 
