add background-size mixin to the vendor.styl

--- a/sources/components/CSSmethods/vendor.styl
+++ b/sources/components/CSSmethods/vendor.styl
@@ -23,6 +23,9 @@ box-sizing()
   -moz-box-sizing arguments
   box-sizing arguments
 
+background-size()
+  vendor('background-size', arguments)
+
 text-shadow()
   vendor('text-shadow', arguments)
 
