--- a/sources/stylesheets/tuktuk.layout.styl
+++ b/sources/stylesheets/tuktuk.layout.styl
@@ -32,7 +32,9 @@ body
   -webkit-text-size-adjust: none
 
   & *
-    box-sizing: border-box
+    box-sizing(border-box)
+    margin: 0
+    padding: 0
 
   & > header
     h = 48px
