.landing form subscribe

--- a/sources/stylesheets/tuktuk.button.styl
+++ b/sources/stylesheets/tuktuk.button.styl
@@ -4,7 +4,7 @@
   display: inline-block
   border: none
   cursor: pointer
-  font-size: 1.15em
+  font-size: font-size-big
   font-family: inherit
   font-weight: inherit
   line-height: 2.3em
@@ -34,7 +34,7 @@
 
   &.large
     font-size: font-size-large
-    line-height: 2.4em
+    height: 52px
     &.icon
       padding: 0 16px
     &:not(.icon)
