New style for buttons

--- a/sources/stylesheets/tuktuk.layout.styl
+++ b/sources/stylesheets/tuktuk.layout.styl
@@ -72,6 +72,7 @@ body
           width: 85%
           border-right: 0px
           margin-top: 0px
+          border: 0
         & .button, button
           width: 15%
           box-shadow: none
