--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -160,16 +160,17 @@ body
   /* ====================== BUTTONS ====================== */
   & .button, button
     color: white !important
-    font-weight: normal !important
-    text-shadow: 0 1px 1px rgba(0,0,0,0.05)
+    font-weight: bold !important
+    text-shadow: rgba(0,0,0,0.1) 0 1px 0
     &:not(.transparent)
       background-color: THEME
       border-radius BORDER-RADIUS
-      box-shadow: inset 0 -2px 0 rgba(0,0,0,0.2), 0 1px 2px rgba(0,0,0,0.2)
+      box-shadow: inset 0 0.1em 0 rgba(255,255,255,0.1), inset 0 -0.15em 0 rgba(0,0,0,0.2), 0 0.15em 0 rgba(0,0,0,0.075)
+      -webkit-font-smoothing: antialiased
       &:hover
-        box-shadow: inset 0 0 128px rgba(255,255,255,0.2), inset 0 -2px 0 rgba(0,0,0,0.1), 0 1px 2px rgba(0,0,0,0.2)
+        box-shadow: inset 0 0 5em rgba(0,0,0,0.15), inset 0 -0.15em 0 rgba(0,0,0,0.2), 0 0.15em 0 rgba(0,0,0,0.075)
       &:active
-        box-shadow inset 0 0 128px rgba(0,0,0,0.1),  inset 0 1px 0 rgba(0,0,0,0.1)
+        box-shadow inset 0 0 5em rgba(0,0,0,0.3), inset 0 0.15em 0 rgba(0,0,0,0.1)
       &.secondary
         background-color: darken(SECONDARY, 25%)
         color: SECONDARY
@@ -181,9 +182,8 @@ body
     &.transparent
       background: none !important
 
-    &.large
-      font-weight: 500
-
+    & .icon
+      opacity: 0.75
 
   & div.img
     background: LIGHT
