--- a/sources/stylesheets/tuktuk.button.styl
+++ b/sources/stylesheets/tuktuk.button.styl
@@ -4,7 +4,7 @@
   display: inline-block
   border: none
   cursor: pointer
-  font-size: font-size-big
+  font-size: inherit
   font-family: inherit
   font-weight: inherit
   line-height: 2.3em
@@ -12,46 +12,23 @@
   text-decoration: none
   outline: none
 
-  &:disabled, &.disabled
-    background: rgba(255,255,255,0.2)
-    color: #999 !important
-
   &.icon
-    padding: 0px 10px
-
+    padding: 0 0.65em
   &:not(.icon)
-    padding: 0 18px
+    padding: 0 1em
     & .icon
       margin-right: (AIR / 2)
-      display: inline-block
+
+  &.large
+    font-size: FONT-SIZE-LARGE
+  &.small
+    font-size: FONT-SIZE-SMALL
+  &.tiny
+    font-size: FONT-SIZE-TINY
 
   &.anchor
     width: 100%
     position: relative
     &:not(.icon) .icon
       position: absolute
-      left: 5%
-
-  &.large
-    font-size: font-size-large
-    height: 52px
-    &.icon
-      padding: 0 16px
-    &:not(.icon)
-      padding: 0 26px
-
-  &.small
-    font-size: 1.0em
-    line-height: 2.1em
-    &.icon
-      padding: 0px 8px
-    &:not(.icon)
-      padding: 0 11px
-
-  &.tiny
-    font-size: font-size-small
-    line-height: 1.8em
-    &.icon
-      padding: 0px 5px
-    &:not(.icon)
-      padding: 0 8px
+      left: AIR
